# mcp-wikipedia

./: .gitignore  README.md  pyproject.toml  wikipedia_server.py
tests/: conftest.py  test_wikipedia_server.py
wikipedia/: __init__.py  search.py
